# lw.PPOCR.Inference

./: .dockerignore  .env.example  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PROJECT_CONTEXT.md  README.md  README_EN.md  compose.yaml  lw.PPOCR.Inference.sln
.github/workflows/: ci.yml  docker.yml  linux-arm64-domestic.yml  linux-arm64-opencv-openeuler.yml  linux-onnxruntime.yml  linux-opencv.yml  linux-openvino.yml
bindings/dotnet/: README.md
bindings/dotnet/lw.PPOCRSharp/: NativeMethods.cs  OcrEngine.cs  OcrTypes.cs  lw.PPOCRSharp.csproj
bindings/dotnet/samples/SmokeTest/: Program.cs  SmokeTest.csproj
bindings/dotnet/samples/UnifiedCli/: Program.cs  UnifiedCli.csproj
bindings/dotnet/samples/UnifiedDemo/: ImageFrame.cs  MainForm.Designer.cs  MainForm.cs  OcrImageView.cs  Program.cs  QUICKSTART.md  UnifiedDemo.csproj
docker/: Dockerfile  configure.jq  docker-entrypoint.sh
docs/: abi-freeze-candidate.md  abi-v1-stability.md  architecture.md  compatibility-matrix.md  docker.md  full-test-report-v0.2.0.md  http-service.md  license-audit.md  linux-domestic-arm64-ci.md  linux-onnxruntime.md  linux-opencv-domestic-arm64.md  linux-opencv-openeuler-arm64.md  linux-opencv.md  linux-openvino.md  migration-roadmap.md  model-manifest.md  performance-report.md  stability-testing.md  tensorrt-engines.md  wechat-v1.3.0.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.8.0.md  v0.9.0-rc.1.md  v1.0.0.md  v1.1.0.md  v1.3.0.md
examples/c/: CMakeLists.txt  README.md  main.c
examples/http/: http-service-linux-arm64-opencv.json  http-service-linux-onnxruntime.json  http-service-linux-openvino.json  http-service-linux.json  http-service.json  install-deps-openeuler.sh  install-deps-rpm.sh  install-deps-ubuntu.sh  install-service.cmd  install-systemd.sh  lw-ppocr-http-onnxruntime.service  lw-ppocr-http-openvino.service  lw-ppocr-http.service  run-http-service-onnxruntime.sh  run-http-service-openvino.sh  run-http-service.cmd  run-http-service.sh  uninstall-service.cmd  uninstall-systemd.sh
examples/http/www/: index.html
examples/python/: README.md  ppocr.py  pyproject.toml
include/lw/ppocr/: ppocr_api.h
models/: model-manifest.schema.json
models/example/: README.md  model.json
models/ppocrv6-tiny/: README.md  cls.fp16.engine  det.fp16.engine  model.json  ppocr_keys.txt
scripts/: ci-linux-arm64-opencv.sh  ci-openeuler-arm64.sh  http-service-smoke.py  package-linux-arm64-opencv.sh  package-linux-onnxruntime-x64.sh  package-linux-openvino-x64.sh  package-linux-x64.sh  package-win-x64.ps1  validate-model-schema.py  verify-linux-package.sh
src/core/: config_validation.cpp
src/core/include/lw/ppocr/core/: config_validation.hpp
src/core/ocr/: CMakeLists.txt  db_postprocessor.cpp  image_ops.cpp  model_manifest.cpp
src/core/ocr/include/lw/ppocr/core/: db_postprocessor.hpp  image_ops.hpp  model_manifest.hpp  ocr_types.hpp
src/http_service/: CMakeLists.txt  base64.cpp  base64.h  http_service.cpp  image_decoder.cpp  image_decoder.h  version.rc
src/loader/: loader.cpp  version.rc
src/runtime/include/lw/ppocr/: runtime_api.h  runtime_result.hpp
src/runtimes/directml/: CMakeLists.txt  directml_engine.cpp  directml_engine.hpp  ort_session.cpp  ort_session.hpp  runtime_entry.cpp  version.rc
src/runtimes/onnxruntime/: CMakeLists.txt  onnxruntime_engine.cpp  ort_session.cpp  runtime_entry.cpp
src/runtimes/opencv_dnn/: CMakeLists.txt  opencv_engine.cpp  opencv_engine.hpp  runtime_entry.cpp  version.rc
src/runtimes/openvino/: CMakeLists.txt  openvino_engine.cpp  openvino_engine.hpp  openvino_session.cpp  openvino_session.hpp  runtime_entry.cpp  version.rc
src/runtimes/stub/: CMakeLists.txt  stub_runtime.cpp
src/runtimes/tensorrt/: CMakeLists.txt  runtime_entry.cpp  tensorrt_engine.cpp  tensorrt_engine.hpp  tensorrt_session.cpp  tensorrt_session.hpp  version.rc
tests/: CMakeLists.txt  abi_smoke_test.cpp  abi_stability_test.cpp  golden_test.cpp  opencv_integration_test.cpp
tests/golden/: sample.jpg.golden.json
